tests/reference/asr-intrinsics5-1cd2db1.stderr
semantic error: Type and kind of the relevant arguments of Ior must be the same
 --> tests/errors/intrinsics5.f90:2:14
  |
2 |     print *, ior(1, 1_8)
  |              ^^^^^^^^^^^ 
